fix overflow-x

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@ body,
 	-webkit-overflow-scrolling: touch;
 	overflow-scrolling: touch;
 	box-sizing: border-box;
+	overflow-x: hidden;
 	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 	  Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
@@ -39,6 +40,7 @@ body,
     --smartphone: 520px;
     --pixel: 475px;
     --retina: 360px;
+	
     
 }
 
